# EasyHap

./: README.md  easyhap_gui.py  pyproject.toml  requirements.txt
easyhap/: __init__.py  cli.py  core.py  gui.py  io_utils.py  plotting.py  stats.py  vcf_reader.py
examples/: EXPECTED_RESULTS.txt  demo.gff3  demo_diploid_multiallelic.vcf  demo_haploid_multiallelic.vcf  demo_triploid_multiallelic.vcf  regions.tsv  sample_group.tsv  test.vcf  traits.tsv
